--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,6 +4,8 @@ on:
     branches-ignore: 
       - 'cesium.com'
       - production
+  workflow_dispatch:
+   
 concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
